fixed hrefs for mock links

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -15,43 +15,43 @@ mixin footer()
             span.block-title.footer__list-title
                 | Навигация
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | О нас
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | Новости
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | Служба поддержки
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | Услуги
           ul.footer__list
             span.block-title.footer__list-title
                   | О нас
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | О сервисе
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | Наша команда
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | Вакансии
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | Инвесторы    
           ul.footer__list
             span.block-title.footer__list-title
               | Служба поддержки
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | Соглашения
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | Сообщества
             li.footer__list-item
-              a.footer__link(href="/mock-address/")
+              a.footer__link(href="/mock-address/change-me")
                 | Связь с нами 
         .footer__subscribe
           span.block-title.footer__subscribe-title
@@ -66,13 +66,13 @@ mixin footer()
           span.footer__copyright
             | Copyright © 2018 Toxin отель. Все права зачищены.
           .footer__social(aria-label="Социальные сети")
-            a(href="/mock-address/" target="_blank" rel="noreferrer noopener").footer__social-link
+            a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
                 use(xlink:href="#twitter")
-            a(href="/mock-address/" target="_blank" rel="noreferrer noopener").footer__social-link
+            a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
                 use(xlink:href="#facebook")
-            a(href="/mock-address/" target="_blank" rel="noreferrer noopener").footer__social-link
+            a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
                 use(xlink:href="#inst")
 
